Core List created and Filter added in Core list

--- a/angular.json
+++ b/angular.json
@@ -125,5 +125,8 @@
       }
     }
   },
-  "defaultProject": "TrainingApp"
+  "defaultProject": "TrainingApp",
+  "cli": {
+    "analytics": false
+  }
 }
