--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@angular/common": "~10.0.2",
     "@angular/compiler": "~10.0.2",
     "@angular/core": "~10.0.2",
+    "@angular/cdk": "10.2.0",
     "@angular/forms": "~10.0.2",
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "primeng": "10.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.1",
