Pagination added and create form added

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3",
-    "primeng": "10.0.0"
+    "primeng": "10.0.0",
+    "primeicons": "4.0.0",
+    "primeflex": "2.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.1",
